--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salt n Pepper</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>hello salt n pepper</h1>
+    <!-- navbar started -->
+    <header>
+        <nav class="navbar">
+            <div class="logo-image">
+                <img src="assets/images/65b73fb7-2706-4440-87b9-9555fcd0ba80.webp" alt="Logo">
+            </div>
+            <div class="nav-items">
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Publications</a>
+                <button class="franchise-btn">
+                    Get a Franchise
+                </button>
+                <button class="order-btn">
+                    Order Online
+                </button>
+
+            </div>
+
+        </nav>
+    </header>
+    <!-- navbar ended -->
+    <main></main>
+    <footer></footer>
+
 </body>
+
 </html>
