--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="logo-image">
-                <img src="assets/images/65b73fb7-2706-4440-87b9-9555fcd0ba80.webp" alt="Logo">
+                <img src="assets/images/65b73fb7-2706-4440-87b9-9555fcd0ba80.webp" alt="Logo" width="165px">
             </div>
             <div class="nav-items">
                 <a href="#">Home</a>
@@ -22,9 +22,9 @@
                 <button class="franchise-btn">
                     Get a Franchise
                 </button>
-                <button class="order-btn">
-
-                </button>
+               <button class="order-btn">
+                Order Online
+               </button>
 
             </div>
 
