--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="logo-image">
-                <img src="assets/images/65b73fb7-2706-4440-87b9-9555fcd0ba80.webp" alt="Logo" width="165px">
+                <img src="assets/images/logo.webp" alt="Logo" width="165px">
             </div>
             <div class="nav-items">
                 <a href="#">Home</a>
@@ -24,6 +24,7 @@
                 </button>
                <button class="order-btn">
                 Order Online
+                <span class="order-icon"><i class="fa-solid fa-arrow-right"></i></span>
                </button>
 
             </div>
@@ -31,8 +32,13 @@
         </nav>
     </header>
     <!-- navbar ended -->
-    <main></main>
+    <main>
+        <section>
+            <img src="assets/images/slider-image.webp" alt="slider iamge" width="100%">
+        </section>
+    </main>
     <footer></footer>
+    <script src="https://kit.fontawesome.com/b9cdd3391c.js" crossorigin="anonymous"></script>
 
 </body>
 
