--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salt n Pepper</title>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -22,10 +22,10 @@
                 <button class="franchise-btn">
                     Get a Franchise
                 </button>
-               <button class="order-btn">
-                Order Online
-                <span class="order-icon"><i class="fa-solid fa-arrow-right"></i></span>
-               </button>
+                <button class="order-btn">
+                    Order Online
+                    <span class="order-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                </button>
 
             </div>
 
@@ -36,6 +36,32 @@
         <section>
             <img src="assets/images/slider-image.webp" alt="slider iamge" width="100%">
         </section>
+        <!-- Welocme to Salt n Pepper started -->
+        <section class="welcome">
+            <h2>Welcome to <span class="font-futurak">Salt'n Pepper</span> <br>
+                Restaurants! Our Brands</h2>
+            <p>Please click our brands below for further information, reservations or to order online!</p>
+           
+           <div class="brands-container">
+            <div class="brands-childeren">
+                <img class="brands-image" src="assets/images/restaurant.webp" alt="brands image">
+<button class="brands-btn">Order Now</button>
+            </div>
+            <div class="brands-childeren">
+                <img class="brands-image" src="assets/images/express.webp" alt="brands image">
+                <button class="brands-btn">Order Now</button>
+            </div>
+            <div class="brands-childeren">
+                <img class="brands-image" src="assets/images/village.webp" alt="Brands image">
+                <button class="brands-btn">Reserve a Table</button>
+            </div>
+            <div class="brands-childeren">
+                <img class="brands-image" src="assets/images/signature.webp" alt="brands image">
+                <button class="brands-btn">Order Now</button>
+            </div>
+           </div>
+        </section>
+        <!-- Welocme to Salt n Pepper ended -->
     </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/b9cdd3391c.js" crossorigin="anonymous"></script>
