restaurant franchise started

--- a/index.html
+++ b/index.html
@@ -41,27 +41,50 @@
             <h2>Welcome to <span class="font-futurak">Salt'n Pepper</span> <br>
                 Restaurants! Our Brands</h2>
             <p>Please click our brands below for further information, reservations or to order online!</p>
-           
-           <div class="brands-container">
-            <div class="brands-childeren">
-                <img class="brands-image" src="assets/images/restaurant.webp" alt="brands image">
-<button class="brands-btn">Order Now</button>
+
+            <div class="brands-container">
+                <div class="brands-childeren">
+                    <img class="brands-image" src="assets/images/restaurant.webp" alt="brands image">
+                    <button class="brands-btn">Order Now</button>
+                </div>
+                <div class="brands-childeren">
+                    <img class="brands-image" src="assets/images/express.webp" alt="brands image">
+                    <button class="brands-btn">Order Now</button>
+                </div>
+                <div class="brands-childeren">
+                    <img class="brands-image" src="assets/images/village.webp" alt="Brands image">
+                    <button class="brands-btn">Reserve a Table</button>
+                </div>
+                <div class="brands-childeren">
+                    <img class="brands-image" src="assets/images/signature.webp" alt="brands image">
+                    <button class="brands-btn">Order Now</button>
+                </div>
             </div>
-            <div class="brands-childeren">
-                <img class="brands-image" src="assets/images/express.webp" alt="brands image">
-                <button class="brands-btn">Order Now</button>
-            </div>
-            <div class="brands-childeren">
-                <img class="brands-image" src="assets/images/village.webp" alt="Brands image">
-                <button class="brands-btn">Reserve a Table</button>
-            </div>
-            <div class="brands-childeren">
-                <img class="brands-image" src="assets/images/signature.webp" alt="brands image">
-                <button class="brands-btn">Order Now</button>
-            </div>
-           </div>
         </section>
         <!-- Welocme to Salt n Pepper ended -->
+
+        <!-- Restaurant Franchises started -->
+        <section class="restaurant-franchises">
+            <h2><span class="font-futurak">Salt'n Pepper</span>
+                Restaurant Franchises</h2>
+            <p>Each of our franchises are individually managed. For further details, kindly contact them directly.
+
+            </p>
+            <div class="restaurant-franchises-container">
+                <div class="restauran-franchises-childeren">
+                    <p>ISLAMABAD</p>
+                    <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
+                    <ul>
+                        <li> Plot# 55, Shabbir Plaza, Blue Area, F-6, Islamabad</li>
+                        <li> <a href="tel"></a> Ph: 051-2604904-6</li>
+                    </ul>
+                    <img class="image-1" src="assets/images/image-1.webp" alt="restaurant image">
+                </div>
+                <div class="restauran-franchises-childeren"></div>
+                <div class="restauran-franchises-childeren"></div>
+            </div>
+        </section>
+        <!-- Restaurant Franchises ended -->
     </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/b9cdd3391c.js" crossorigin="anonymous"></script>
