--- a/index.html
+++ b/index.html
@@ -72,17 +72,45 @@
             </p>
             <div class="restaurant-franchises-container">
                 <div class="restauran-franchises-childeren">
-                    <p>ISLAMABAD</p>
-                    <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
-                    <ul>
-                        <li> Plot# 55, Shabbir Plaza, Blue Area, F-6, Islamabad</li>
-                        <li> <a href="tel"></a> Ph: 051-2604904-6</li>
-                    </ul>
-                    <img class="image-1" src="assets/images/image-1.webp" alt="restaurant image">
+                    <div class="main-text">
+                        <small class="small-text">Islamabad</small>
+                        <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
+                        <p> Plot# 55, Shabbir Plaza, Blue Area, F-6, Islamabad</p>
+                        <p><a href="tel:051-2604904-6"></a> Ph: 051-2604904-6</p>
+                        <button class="restauran-franchises-btn">Get Directions
+                            <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                        </button>
+
+                    </div>
+                    <div class="main-images"> <img src="assets/images/image-1.webp" alt="Main IMAGE"></div>
                 </div>
-                <div class="restauran-franchises-childeren"></div>
-                <div class="restauran-franchises-childeren"></div>
-            </div>
+<div class="restaurant-franchises-container-2" >
+                <div class="restauran-franchises-childeren">
+                    <div class="main-text">
+                    <div class="main-images"><img src="assets/images/image-2.webp" alt="Main Image-2"></div>    
+                        <small class="small-text">Faisalabad</small>
+                        <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
+                        <p> 4-Kohinoor City, Faisalabad</p>
+                        <p><a href="tel:041-8711404"></a> Ph: 041-8711404</p>
+                        <button class="restauran-franchises-btn">Get Directions
+                            <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                        </button>
+                    </div>
+                    <!-- <div class="main-images"><img src="assets/images/image-2.webp" alt="Main Image-2"></div> -->
+                    </div>
+                    <div class="restaurant-franchises-container-3">
+                    <div class="restauran-franchises-childeren">
+                        <div class="main-text">
+                            <small class="small-text">Bahawalpur</small>
+                            <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
+                            <p> D.C Chowk, opposite Commissioner House, Bahawalpur</p>
+                            <p><a href="tel:062-2740271-2"></a> Ph: 062-2740271-2</p>
+                            <button class="restauran-franchises-btn">Get Directions
+                                <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                            </button>
+                        </div>
+                        <div class="main-images"><img src="assets/images/image-3.webp" alt=""></div>
+</div>
         </section>
         <!-- Restaurant Franchises ended -->
     </main>
