--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
                 </div>
 <div class="restaurant-franchises-container-2" >
                 <div class="restauran-franchises-childeren">
+                    
+                    <div class="main-images"><img src="assets/images/image-2.webp" alt="Main Image-2"></div>   
                     <div class="main-text">
-                    <div class="main-images"><img src="assets/images/image-2.webp" alt="Main Image-2"></div>    
                         <small class="small-text">Faisalabad</small>
                         <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
                         <p> 4-Kohinoor City, Faisalabad</p>
@@ -96,6 +97,7 @@
                             <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
                         </button>
                     </div>
+                    </div> 
                     <!-- <div class="main-images"><img src="assets/images/image-2.webp" alt="Main Image-2"></div> -->
                     </div>
                     <div class="restaurant-franchises-container-3">
