--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                     <div class="main-text">
                         <small class="small-text">Islamabad</small>
                         <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
-                        <p> Plot# 55, Shabbir Plaza, Blue Area, F-6, Islamabad</p>
-                        <p><a href="tel:051-2604904-6"></a> Ph: 051-2604904-6</p>
+                        <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span> Plot# 55, Shabbir Plaza, Blue Area, F-6, Islamabad</p>
+                        <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a href="tel:051-2604904-6"></a> Ph: 051-2604904-6</p>
                         <button class="restauran-franchises-btn">Get Directions
                             <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
                         </button>
@@ -91,8 +91,8 @@
                     <div class="main-text">
                         <small class="small-text">Faisalabad</small>
                         <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
-                        <p> 4-Kohinoor City, Faisalabad</p>
-                        <p><a href="tel:041-8711404"></a> Ph: 041-8711404</p>
+                        <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span> 4-Kohinoor City, Faisalabad</p>
+                        <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a href="tel:041-8711404"></a> Ph: 041-8711404</p>
                         <button class="restauran-franchises-btn">Get Directions
                             <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
                         </button>
@@ -105,8 +105,8 @@
                         <div class="main-text">
                             <small class="small-text">Bahawalpur</small>
                             <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
-                            <p> D.C Chowk, opposite Commissioner House, Bahawalpur</p>
-                            <p><a href="tel:062-2740271-2"></a> Ph: 062-2740271-2</p>
+                            <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span>  D.C Chowk, opposite Commissioner House, Bahawalpur</p>
+                            <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a href="tel:062-2740271-2"></a> Ph: 062-2740271-2</p>
                             <button class="restauran-franchises-btn">Get Directions
                                 <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
                             </button>
