express franchise started

--- a/index.html
+++ b/index.html
@@ -115,6 +115,26 @@
 </div>
         </section>
         <!-- Restaurant Franchises ended -->
+
+        <!-- express franchises started -->
+         <section class="express-franchises">
+            <h2><span class="font-futurak">Salt'n Pepper
+</span> <br>Express Franchises</h2>
+            <div class="express-franchises-container">
+                <div class="express-franchises-childeren">
+                    <img src="assets/images/exp-franchise-1.webp" alt="exp-franchise image"><br>
+                    <small class="small-text-2">sargodha</small>
+                    <h3> <span class="font-futurak">Salt'n Pepper</span>Express</h3>
+                    <p> <span class="location-icon"></span> Opposite Sargodha Arts Council Babar Road</p>
+                    <p><span class="tel-icon"> <a href="
+tel: 048-3725500"></a></span>
+Ph: 048-3725500</p>
+                </div>
+                <div class="express-franchises-childeren"></div>
+                <div class="express-franchises-childeren"></div>
+            </div>
+         </section>
+        <!-- express franchises ended -->
     </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/b9cdd3391c.js" crossorigin="anonymous"></script>
