--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
                     <div class="main-text">
                         <small class="small-text">Islamabad</small>
                         <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
-                        <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span> Plot# 55, Shabbir Plaza, Blue Area, F-6, Islamabad</p>
-                        <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a href="tel:051-2604904-6"></a> Ph: 051-2604904-6</p>
+                        <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span> Plot# 55,
+                            Shabbir Plaza, Blue Area, F-6, Islamabad</p>
+                        <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a
+                                href="tel:051-2604904-6"></a> Ph: 051-2604904-6</p>
                         <button class="restauran-franchises-btn">Get Directions
                             <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
                         </button>
@@ -84,56 +86,83 @@
                     </div>
                     <div class="main-images"> <img src="assets/images/image-1.webp" alt="Main IMAGE"></div>
                 </div>
-<div class="restaurant-franchises-container-2" >
-                <div class="restauran-franchises-childeren">
-                    
-                    <div class="main-images"><img src="assets/images/image-2.webp" alt="Main Image-2"></div>   
-                    <div class="main-text">
-                        <small class="small-text">Faisalabad</small>
-                        <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
-                        <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span> 4-Kohinoor City, Faisalabad</p>
-                        <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a href="tel:041-8711404"></a> Ph: 041-8711404</p>
-                        <button class="restauran-franchises-btn">Get Directions
-                            <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
-                        </button>
+                <div class="restaurant-franchises-container-2">
+                    <div class="restauran-franchises-childeren">
+
+                        <div class="main-images"><img src="assets/images/image-2.webp" alt="Main Image-2"></div>
+                        <div class="main-text">
+                            <small class="small-text">Faisalabad</small>
+                            <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
+                            <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span> 4-Kohinoor
+                                City, Faisalabad</p>
+                            <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a
+                                    href="tel:041-8711404"></a> Ph: 041-8711404</p>
+                            <button class="restauran-franchises-btn">Get Directions
+                                <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                            </button>
+                        </div>
                     </div>
-                    </div> 
                     <!-- <div class="main-images"><img src="assets/images/image-2.webp" alt="Main Image-2"></div> -->
-                    </div>
-                    <div class="restaurant-franchises-container-3">
+                </div>
+                <div class="restaurant-franchises-container-3">
                     <div class="restauran-franchises-childeren">
                         <div class="main-text">
                             <small class="small-text">Bahawalpur</small>
                             <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
-                            <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span>  D.C Chowk, opposite Commissioner House, Bahawalpur</p>
-                            <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a href="tel:062-2740271-2"></a> Ph: 062-2740271-2</p>
+                            <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span> D.C Chowk,
+                                opposite Commissioner House, Bahawalpur</p>
+                            <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a
+                                    href="tel:062-2740271-2"></a> Ph: 062-2740271-2</p>
                             <button class="restauran-franchises-btn">Get Directions
                                 <span class="franchise-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
                             </button>
                         </div>
                         <div class="main-images"><img src="assets/images/image-3.webp" alt=""></div>
-</div>
+                    </div>
         </section>
         <!-- Restaurant Franchises ended -->
 
         <!-- express franchises started -->
-         <section class="express-franchises">
+        <section class="express-franchises">
             <h2><span class="font-futurak">Salt'n Pepper
-</span> <br>Express Franchises</h2>
+                </span> <br>Express Franchises</h2>
             <div class="express-franchises-container">
                 <div class="express-franchises-childeren">
                     <img src="assets/images/exp-franchise-1.webp" alt="exp-franchise image"><br>
                     <small class="small-text-2">sargodha</small>
-                    <h3> <span class="font-futurak">Salt'n Pepper</span>Express</h3>
-                    <p> <span class="location-icon"></span> Opposite Sargodha Arts Council Babar Road</p>
+                    <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>Opposite Sargodha Arts Council Babar Road</p>
                     <p><span class="tel-icon"> <a href="
-tel: 048-3725500"></a></span>
-Ph: 048-3725500</p>
+tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
+                        Ph: 048-3725500</p>
+                        <button class="exp-franchise-btn">Get Directions
+                             <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                        </button>
                 </div>
-                <div class="express-franchises-childeren"></div>
-                <div class="express-franchises-childeren"></div>
+                <div class="express-franchises-childeren">
+                    <img src="assets/images/exp-franchise-2.webp" alt="exp-franchise image"><br>
+                    <small class="small-text-2">Jehlum</small>
+                    <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
+                    <p> <span class="location-icon"></span><i class="fa-solid fa-location-dot"></i> Opposite Dancing Fountain Gallery 2 Citi Housing Jhelum,</p>
+                    <p><span class="tel-icon"> <a href="tel: 0307-7675555"></a></span><i class="fa-solid fa-phone"></i>
+                       Ph: 0307-7675555</p>
+                       <button class="exp-franchise-btn">Get Directions
+                         <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                       </button>
+                </div>
+                <div class="express-franchises-childeren">
+                    <img src="assets/images/exp-franchise-3.webp" alt="exp-franchise image"><br>
+                    <small class="small-text-2">Faisal Town</small>
+                    <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>  34-C Abul Hassan Isfahani Rd, Faisal Town,Lahore</p>
+                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i class="fa-solid fa-phone"></i>
+                      Ph: 042-111-100-678</p>
+                       <button class="exp-franchise-btn">Get Directions
+                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                       </button>
+                </div>
             </div>
-         </section>
+        </section>
         <!-- express franchises ended -->
     </main>
     <footer></footer>
