--- a/index.html
+++ b/index.html
@@ -161,8 +161,85 @@ tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
                           <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
                        </button>
                 </div>
-            </div>
+                  </div>
         </section>
+        <section>
+        <div class="express-franchises-container-2">
+                <div class="express-franchises-childeren">
+                    <img src="assets/images/exp-franchise-4.webp" alt="exp-franchise image"><br>
+                    <small class="small-text-2">DHA</small>
+                    <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   93-Y Phase III, DHA,Lahore</p>
+                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i class="fa-solid fa-phone"></i>
+                     Ph: 042-111-100-678</p>
+                       <button class="exp-franchise-btn">Get Directions
+                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                       </button>
+
+                </div>
+                
+                <div class="express-franchises-childeren">
+                    <img src="assets/images/exp-franchise-5.webp" alt="exp-franchise image"><br>
+                    <small class="small-text-2">Bahria Town</small>
+                    <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   Arwa Heights Building 19 Nishtar Block, Sector E, Bahria Town Lahore</p>
+                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i class="fa-solid fa-phone"></i>
+                      Ph: 042-111-100-678</p>
+                       <button class="exp-franchise-btn">Get Directions
+                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                       </button>
+                </div>
+                <div class="express-franchises-childeren">
+                    <img src="assets/images/exp-franchise-6.webp" alt="exp-franchise image"><br>
+                    <small class="small-text-2">Gujar Khan</small>
+                    <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   New Metro City Gujar Khan</p>
+                    <p><span class="tel-icon"> <a href="tel: 0321-1114965"></a></span><i class="fa-solid fa-phone"></i>
+                     Ph: 0321-1114965</p>
+                       <button class="exp-franchise-btn">Get Directions
+                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                       </button>
+                </div>
+                </div>
+                </section>
+                <section>
+                    <div class="restaurant-franchises-container-3">
+                <div class="express-franchises-childeren">
+                    <img src="assets/images/exp-franchise-7.webp" alt="exp-franchise image"><br>
+                    <small class="small-text-2">Lahore</small>
+                    <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   Shop no.5, Arcade Block, Fortress Stadium, Lahore</p>
+                    <p><span class="tel-icon"> <a href="tel 042-366-23-100"></a></span><i class="fa-solid fa-phone"></i>
+                     Ph: 042-366-23-100</p>
+                       <button class="exp-franchise-btn">Get Directions
+                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                       </button>
+                </div>
+                <div class="express-franchises-childeren">
+                    <img src="assets/images/exp-franchise-8.webp" alt="exp-franchise image"><br>
+                    <small class="small-text-2">Gujrat</small>
+                    <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   Service Mor, Gujrat</p>
+                    <p><span class="tel-icon"> <a href="tel:  0311-1124600"></a></span><i class="fa-solid fa-phone"></i>
+                      Ph: 0311-1124600</p>
+                       <button class="exp-franchise-btn">Get Directions
+                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                       </button>
+                </div>
+                <div class="express-franchises-childeren">
+                    <img src="assets/images/exp-franchise-9.webp" alt="exp-franchise image"><br>
+                    <small class="small-text-2">Sahiwal</small>
+                    <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   Opposite Main Gate Police Line, Sahiwal</p>
+                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i class="fa-solid fa-phone"></i>
+                      Ph: 040-4515485</p>
+                       <button class="exp-franchise-btn">Get Directions
+                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                       </button>
+                </div>
+</div>
+                </section>
+          
         <!-- express franchises ended -->
     </main>
     <footer></footer>
