--- a/index.html
+++ b/index.html
@@ -131,116 +131,148 @@
                     <img src="assets/images/exp-franchise-1.webp" alt="exp-franchise image"><br>
                     <small class="small-text-2">sargodha</small>
                     <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
-                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>Opposite Sargodha Arts Council Babar Road</p>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>Opposite Sargodha
+                        Arts Council Babar Road</p>
                     <p><span class="tel-icon"> <a href="
 tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
                         Ph: 048-3725500</p>
-                        <button class="exp-franchise-btn">Get Directions
-                             <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
-                        </button>
+                    <button class="exp-franchise-btn">Get Directions
+                        <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                    </button>
                 </div>
                 <div class="express-franchises-childeren">
                     <img src="assets/images/exp-franchise-2.webp" alt="exp-franchise image"><br>
                     <small class="small-text-2">Jehlum</small>
                     <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
-                    <p> <span class="location-icon"></span><i class="fa-solid fa-location-dot"></i> Opposite Dancing Fountain Gallery 2 Citi Housing Jhelum,</p>
+                    <p> <span class="location-icon"></span><i class="fa-solid fa-location-dot"></i> Opposite Dancing
+                        Fountain Gallery 2 Citi Housing Jhelum,</p>
                     <p><span class="tel-icon"> <a href="tel: 0307-7675555"></a></span><i class="fa-solid fa-phone"></i>
-                       Ph: 0307-7675555</p>
-                       <button class="exp-franchise-btn">Get Directions
-                         <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
-                       </button>
+                        Ph: 0307-7675555</p>
+                    <button class="exp-franchise-btn">Get Directions
+                        <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                    </button>
                 </div>
                 <div class="express-franchises-childeren">
                     <img src="assets/images/exp-franchise-3.webp" alt="exp-franchise image"><br>
                     <small class="small-text-2">Faisal Town</small>
                     <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
-                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>  34-C Abul Hassan Isfahani Rd, Faisal Town,Lahore</p>
-                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i class="fa-solid fa-phone"></i>
-                      Ph: 042-111-100-678</p>
-                       <button class="exp-franchise-btn">Get Directions
-                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
-                       </button>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i> 34-C Abul Hassan
+                        Isfahani Rd, Faisal Town,Lahore</p>
+                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i
+                            class="fa-solid fa-phone"></i>
+                        Ph: 042-111-100-678</p>
+                    <button class="exp-franchise-btn">Get Directions
+                        <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                    </button>
                 </div>
-                  </div>
-        </section>
-        <section>
-        <div class="express-franchises-container-2">
+            </div>
+
+            <div class="express-franchises-container-2">
                 <div class="express-franchises-childeren">
                     <img src="assets/images/exp-franchise-4.webp" alt="exp-franchise image"><br>
                     <small class="small-text-2">DHA</small>
                     <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
-                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   93-Y Phase III, DHA,Lahore</p>
-                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i class="fa-solid fa-phone"></i>
-                     Ph: 042-111-100-678</p>
-                       <button class="exp-franchise-btn">Get Directions
-                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
-                       </button>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i> 93-Y Phase III,
+                        DHA,Lahore</p>
+                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i
+                            class="fa-solid fa-phone"></i>
+                        Ph: 042-111-100-678</p>
+                    <button class="exp-franchise-btn">Get Directions
+                        <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                    </button>
 
                 </div>
-                
+
                 <div class="express-franchises-childeren">
                     <img src="assets/images/exp-franchise-5.webp" alt="exp-franchise image"><br>
                     <small class="small-text-2">Bahria Town</small>
                     <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
-                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   Arwa Heights Building 19 Nishtar Block, Sector E, Bahria Town Lahore</p>
-                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i class="fa-solid fa-phone"></i>
-                      Ph: 042-111-100-678</p>
-                       <button class="exp-franchise-btn">Get Directions
-                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
-                       </button>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i> Arwa Heights
+                        Building 19 Nishtar Block, Sector E, Bahria Town Lahore</p>
+                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i
+                            class="fa-solid fa-phone"></i>
+                        Ph: 042-111-100-678</p>
+                    <button class="exp-franchise-btn">Get Directions
+                        <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                    </button>
                 </div>
                 <div class="express-franchises-childeren">
                     <img src="assets/images/exp-franchise-6.webp" alt="exp-franchise image"><br>
                     <small class="small-text-2">Gujar Khan</small>
                     <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
-                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   New Metro City Gujar Khan</p>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i> New Metro City
+                        Gujar Khan</p>
                     <p><span class="tel-icon"> <a href="tel: 0321-1114965"></a></span><i class="fa-solid fa-phone"></i>
-                     Ph: 0321-1114965</p>
-                       <button class="exp-franchise-btn">Get Directions
-                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
-                       </button>
+                        Ph: 0321-1114965</p>
+                    <button class="exp-franchise-btn">Get Directions
+                        <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                    </button>
                 </div>
-                </div>
-                </section>
-                <section>
-                    <div class="restaurant-franchises-container-3">
+            </div>
+
+            <div class="express-franchises-container-3">
                 <div class="express-franchises-childeren">
-                    <img src="assets/images/exp-franchise-7.webp" alt="exp-franchise image"><br>
+                    <img src="assets/images/exp-franchise-7.webp" alt="exp-franchise image" width="350px"
+                        height="250px"><br>
                     <small class="small-text-2">Lahore</small>
                     <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
-                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   Shop no.5, Arcade Block, Fortress Stadium, Lahore</p>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i> Shop no.5, Arcade
+                        Block, Fortress Stadium, Lahore</p>
                     <p><span class="tel-icon"> <a href="tel 042-366-23-100"></a></span><i class="fa-solid fa-phone"></i>
-                     Ph: 042-366-23-100</p>
-                       <button class="exp-franchise-btn">Get Directions
-                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
-                       </button>
+                        Ph: 042-366-23-100</p>
+                    <button class="exp-franchise-btn">Get Directions
+                        <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                    </button>
                 </div>
                 <div class="express-franchises-childeren">
-                    <img src="assets/images/exp-franchise-8.webp" alt="exp-franchise image"><br>
+                    <img src="assets/images/exp-franchise-8.webp" alt="exp-franchise image" width="350px"
+                        height="250px"><br>
                     <small class="small-text-2">Gujrat</small>
                     <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
-                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   Service Mor, Gujrat</p>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i> Service Mor, Gujrat
+                    </p>
                     <p><span class="tel-icon"> <a href="tel:  0311-1124600"></a></span><i class="fa-solid fa-phone"></i>
-                      Ph: 0311-1124600</p>
-                       <button class="exp-franchise-btn">Get Directions
-                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
-                       </button>
+                        Ph: 0311-1124600</p>
+                    <button class="exp-franchise-btn">Get Directions
+                        <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                    </button>
                 </div>
                 <div class="express-franchises-childeren">
-                    <img src="assets/images/exp-franchise-9.webp" alt="exp-franchise image"><br>
+                    <img src="assets/images/exp-franchise-9.webp" alt="exp-franchise image" width="350px "
+                        height="250px"><br>
                     <small class="small-text-2">Sahiwal</small>
                     <h3> <span class="head-3">Salt'n Pepper</span>Express</h3>
-                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i>   Opposite Main Gate Police Line, Sahiwal</p>
-                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i class="fa-solid fa-phone"></i>
-                      Ph: 040-4515485</p>
-                       <button class="exp-franchise-btn">Get Directions
-                          <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
-                       </button>
+                    <p> <span class="location-icon"></span> <i class="fa-solid fa-location-dot"></i> Opposite Main Gate
+                        Police Line, Sahiwal</p>
+                    <p><span class="tel-icon"> <a href="tel: 042-111-100-678"></a></span><i
+                            class="fa-solid fa-phone"></i>
+                        Ph: 040-4515485</p>
+                    <button class="exp-franchise-btn">Get Directions
+                        <span class="exp-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                    </button>
                 </div>
-</div>
-                </section>
-          
+            </div>
+        </section>
         <!-- express franchises ended -->
+
+        <!-- Village Franchise started -->
+         <section class="village-franchise">
+          <div class="main-images-1"><img src="assets/images/village-franchise.webp" alt="village-franchise"></div>
+         <div class="village-franchises-container">
+                <div class="village-franchises-childeren">
+                    <div class="main-text">
+                        <small class="small-text">GUJRANWALA</small>
+                        <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
+                        <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span>  Adjacent to Rida Marquees /DHA Main Gate, GT Road Gujranwala Cantt</p>
+                        <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a
+                                href="tel 055-3884500 l ,055-3880400"></a>  Ph: 055-3884500 l ,055-3880400</p>
+                        <button class="village-franchise-btn">Get Directions
+                            <span class="village-btn-icon"><i class="fa-solid fa-arrow-right"></i></span>
+                        </button>
+
+                    </div>
+                    </section>
+        <!-- Village Franchise ended -->
     </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/b9cdd3391c.js" crossorigin="anonymous"></script>
