--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@ tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
           <div class="main-images-1"><img src="assets/images/village-franchise.webp" alt="village-franchise"></div>
          <div class="village-franchises-container">
                 <div class="village-franchises-childeren">
-                    <div class="main-text">
-                        <small class="small-text">GUJRANWALA</small>
+                    <div class="main-text-1">
+                        <small class="small-text-1">GUJRANWALA</small>
                         <h3><span class="font-futurak">Salt'n Pepper</span> Restaurant</h3>
                         <p> <span class="location-icon"><i class="fa-solid fa-location-dot"></i></span>  Adjacent to Rida Marquees /DHA Main Gate, GT Road Gujranwala Cantt</p>
                         <p> <span class="tel-icon"><i class="fa-solid fa-phone"></i></span><a
