--- a/index.html
+++ b/index.html
@@ -275,7 +275,10 @@ tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
         <!-- Village Franchise ended -->
 
         <!-- Location Card started -->
-         <section>
+         <section class="location-cards">
+            <h1> <span class="font-futurak-1">Salt'n Pepper</span></h1>
+            <h2>Express Franchises <span>(Opening Soon)</span></h2>
+           
          <div class="location-card">
             <img src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
