--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about-us.html">About Us</a></li>
-        <li><a href="#">Publications</a></li>
+        <li><a href="publications.html">Publications</a></li>
         <li><a href="#">Get a Franchise</a></li>
         <li><a href="#">Feedback</a></li>
         <li><a href="#">contact Us</a></li>
