--- a/index.html
+++ b/index.html
@@ -278,50 +278,51 @@ tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
          <section class="location-cards">
             <h1> <span class="font-futurak-1">Salt'n Pepper</span></h1>
             <h2>Express Franchises <span>(Opening Soon)</span></h2>
-           
+           <div class="location-cards-wrapper">
          <div class="location-card">
             <img src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <h4>Burewala</h4>
-         </div> <br>
+         </div>
          <div class="location-card">
             <img src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p>Blue World City</p>
             <h4>Rawalpindi</h4>
-         </div><br>
+         </div>
          <div class="location-card"><img src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p>Al-Jalil Garden</p>
             <h4>Sharqpur</h4>
-         </div></div><br>
+         </div></div>
          <div class="location-card"><img src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p>Al-Jalil Garden</p>
             <h4>Sadhoke</h4>
-         </div></div><br>
+         </div></div>
          <div class="location-card"><img src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p>Al-Jalil Garden</p>
             <h4>Sheikhupura</h4>
-         </div></div><br>
+         </div></div>
          <div class="location-card"><img src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p></p>
             <h4>Okara</h4>
-         </div></div><br>
+         </div></div>
          <div class="location-card"><img class="card-img" src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p></p>
             <h4>Kharian</h4>
          </div></div>
+         </div>
          </section>
         <!-- Location Card ended -->
     </main>
