--- a/index.html
+++ b/index.html
@@ -297,31 +297,31 @@ tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p>Al-Jalil Garden</p>
             <h4>Sharqpur</h4>
-         </div></div>
+         </div>
          <div class="location-card"><img src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p>Al-Jalil Garden</p>
             <h4>Sadhoke</h4>
-         </div></div>
+         </div>
          <div class="location-card"><img src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p>Al-Jalil Garden</p>
             <h4>Sheikhupura</h4>
-         </div></div>
+         </div>
          <div class="location-card"><img src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p></p>
             <h4>Okara</h4>
-         </div></div>
+         </div>
          <div class="location-card"><img class="card-img" src="assets/images/location.webp" alt="location.png">
             <small>Opening Soon</small>
             <h4> <span class="inter-font">Salt'n Pepper</span>Express</h4>
             <p></p>
             <h4>Kharian</h4>
-         </div></div>
+         </div>
          </div>
          </section>
         <!-- Location Card ended -->
