home page completed

--- a/index.html
+++ b/index.html
@@ -326,7 +326,58 @@ tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
          </section>
         <!-- Location Card ended -->
     </main>
-    <footer></footer>
+    <h2 class="social">Social Feed</h2>
+    <footer>
+<div class="footer"><img src="assets/images/logo.webp" alt="" width="140px">
+<p>The Salt’n Pepper Restaurants are an example of gracious dinning, outstanding service, extraordinary classic and contemporary cuisine. The restaurants have become the ultimate dinning destinations in Lahore. From family occasions to business dinner and moments of the heart, this place is where unforgettable memories are made.</p>
+<ul>
+    <li><a href="#">Terms & conditions</a></li>
+    <li><a href="#">Privacy policy</a></li>
+</ul>
+</div>
+<div class="site-links">
+    Site Links
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Publications</a></li>
+        <li><a href="#">Get a Franchise</a></li>
+        <li><a href="#">Feedback</a></li>
+        <li><a href="#">contact Us</a></li>
+    </ul>
+</div>
+<div class="contact-us">
+    <h4>Contact Us</h4> <br>
+    <span class="span-1">Head office Address</span>
+     <br>
+
+    <p>Foodconsults (Pvt) Ltd
+23-Usman Block, New GardenTown, Lahore, Pakistan</p><br>
+<h4>Head Office Number</h4>
+<ul>
+    <li>+92 42 358 509 31</li>
+    <li>+92 42 358 509 30</li>
+</ul>
+<h4>Email Address</h4>
+<a href="mailto">snpfood@brain.net.pk</a><br>
+<h4>Free Delivery Number</h4>
+<ul>
+    <li>+92 42 111 100 678</li>
+    <li>+92 42 111 100 678</li>
+</ul>
+<div class="icons">
+    Follow Us
+    <div class="social-icons">
+       
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+    </div>
+</div>
+</div>
+
+
+    </footer>
     <script src="https://kit.fontawesome.com/b9cdd3391c.js" crossorigin="anonymous"></script>
 
 </body>
