--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="nav-items">
                 <a href="#">Home</a>
-                <a href="#">About Us</a>
+                <a href="about-us.html">About Us</a>
                 <a href="#">Publications</a>
                 <button class="franchise-btn">
                     Get a Franchise
