--- a/about-us.html
+++ b/about-us.html
@@ -35,12 +35,15 @@
             <p>The first Salt’n Pepper Restaurant on the Lahore Mall Road was established in 1983 by hotelier/restaurant entrepreneur Mahmood Akbar, considered by many as the pioneer hotelier and restaurateur in Pakistan.</p><br>
             <p>Foodconsults (Pvt.) Limited the owing company of Salt’ n Pepper Restaurants, which has its Headquarter in Lahore, prides itself on developing Pakistan’s first national chain of restaurants. For over 3 decades, the group’s focus has been to provide their guests with an exceptional dining experience. The group’s profile includes expertise in Pakistani and Continental cuisine, along with Fast Food.</p><br>
             <h2>Restaurant</h2> <br>
-            <p>M/S. Foodconsults (Pvt.) Limited operates several different Salt’n Pepper Restaurants in Lahore. Each offering a unique dining experience. The group’s chronology of success is as follows:-</p><br>
+            <p>M/S. Foodconsults (Pvt.) Limited operates several different Salt’n Pepper Restaurants in Lahore. Each offering a unique dining experience. The group’s chronology of success is as follows:-</p><br> <br>
+            <section class="intro-first">
             <div class="first-img">
                 <h2><span class="font-futurak">Salt'n Pepper</span>  Restaurant</h2><br>
-                <p>The Salt’n Pepper Restaurants at Mall and Liberty Market Lahore, are considered to be the first proper family style restaurants in the food industry of Pakistan. These restaurants pride themselves for being symbolized as an eatery with a customer loyalty spanning over three generations. As a restaurant model, these have inspired the set-up of numerous other restaurants across Pakistan.</p>
-                <img src="assets/images/img-1.webp" alt="" width="370px">
+                <p>The Salt’n Pepper Restaurants at Mall and Liberty Market Lahore, are considered to be the first proper family style restaurants in the food industry of Pakistan. These restaurants pride themselves for being symbolized as an eatery with a customer loyalty spanning over three generations. As a restaurant model, these have inspired the set-up of numerous other restaurants across Pakistan.</p></div>
+                <div> <img src="assets/images/img-1.webp" alt="" width="370px"></div>
+                
             </div>
+            </section>
 
         </div>
     </header>
