--- a/about-us.html
+++ b/about-us.html
@@ -38,12 +38,24 @@
             <p>M/S. Foodconsults (Pvt.) Limited operates several different Salt’n Pepper Restaurants in Lahore. Each offering a unique dining experience. The group’s chronology of success is as follows:-</p><br> <br>
             <section class="intro-first">
             <div class="first-img">
-                <h2><span class="font-futurak">Salt'n Pepper</span>  Restaurant</h2><br>
+                <h2><span class="font-futurak">Salt'n Pepper</span>  Restaurant</h2>
                 <p>The Salt’n Pepper Restaurants at Mall and Liberty Market Lahore, are considered to be the first proper family style restaurants in the food industry of Pakistan. These restaurants pride themselves for being symbolized as an eatery with a customer loyalty spanning over three generations. As a restaurant model, these have inspired the set-up of numerous other restaurants across Pakistan.</p></div>
-                <div> <img src="assets/images/img-1.webp" alt="" width="370px"></div>
+                <div> <img src="assets/images/img-1.webp" alt="" width="500px"></div>
                 
             </div>
             </section>
+             <section class="intro-first-1">
+  <div class="image-container">
+    <img src="assets/images/img-2.webp" alt=""  width="500px">
+  </div>
+  <div class="text-container">
+    <h2><span class="font-futurak">Salt'n Pepper</span> Village Restaurant</h2>
+    <p>
+      The Salt’n Pepper Village Restaurant in Lahore is considered to be the restaurant that revolutionized dining experiences in Pakistan. The Village offers classic and modern sub-continental dishes. The village restaurant created a new concept of “Live Buffet” where everything is cooked in front of you in a ‘bazaar’ like atmosphere. The Village is an acclaimed restaurant brand, credited with the promotion of the Pakistani cuisine and the revival of some old recipes. The Village Lahore has a seating capacity of over 300 guests. This restaurant has hosted countless lunches and dinners for local and foreign dignitaries and celebrities like the late Princess Diana, late prime minister of Pakistan Benazir Bhutto, ex-president of Pakistan Gen. (R) Pervez Musharraf and many more.
+    </p>
+  </div>
+</section>
+
 
         </div>
     </header>
