--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@ tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
 <div class="site-links">
     Site Links
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about-us.html">About Us</a></li>
         <li><a href="#">Publications</a></li>
         <li><a href="#">Get a Franchise</a></li>
         <li><a href="#">Feedback</a></li>
