Salt n Pepper Completed

--- a/about-us.html
+++ b/about-us.html
@@ -18,9 +18,12 @@
                 <a href="index.html">Home</a>
                 <a href="about-us.html">About Us</a>
                 <a href="publications.html">Publications</a>
-                <button class="franchise-btn">
-                    Get a Franchise
-                </button>
+                <a  href="franchise.html">
+                  <button class="franchise-btn" >
+                     Get a Franchise
+                    
+                </button> 
+                </a>
                 <button class="order-btn">
                     Order Online
                     <span class="order-icon"><i class="fa-solid fa-arrow-right"></i></span>
