--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
                 <a href="#">Home</a>
                 <a href="about-us.html">About Us</a>
                 <a href="#">Publications</a>
-                <button class="franchise-btn">
+                <a  href="franchise.html">
+                  <button class="franchise-btn" >
+                     Get a Franchise
+                    
+                </button> 
+                </a>
+                <!-- <a href="franchise.html"><button class="franchise-btn">
+                    
                     Get a Franchise
-                </button>
+                </button></a> -->
                 <button class="order-btn">
                     Order Online
                     <span class="order-icon"><i class="fa-solid fa-arrow-right"></i></span>
@@ -276,8 +283,8 @@ tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
 
         <!-- Location Card started -->
          <section class="location-cards">
-            <h1> <span class="font-futurak-1">Salt'n Pepper</span></h1>
-            <h2>Express Franchises <span>(Opening Soon)</span></h2>
+            <div class="txt-align"><h1> <span class="font-futurak-1">Salt'n Pepper</span></h1>
+            <h2>Express Franchises <span>(Opening Soon)</span></h2></div>
            <div class="location-cards-wrapper">
          <div class="location-card">
             <img src="assets/images/location.webp" alt="location.png">
@@ -341,7 +348,7 @@ tel: 048-3725500"></a></span><i class="fa-solid fa-phone"></i>
         <li><a href="index.html">Home</a></li>
         <li><a href="about-us.html">About Us</a></li>
         <li><a href="publications.html">Publications</a></li>
-        <li><a href="#">Get a Franchise</a></li>
+        <li><a href="franchise.html">Get a Franchise</a></li>
         <li><a href="#">Feedback</a></li>
         <li><a href="#">contact Us</a></li>
     </ul>
