salt n pepper completed

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <img src="assets/images/logo.webp" alt="Logo" width="165px">
             </div>
             <div class="nav-items">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about-us.html">About Us</a>
-                <a href="#">Publications</a>
+                <a href="publications.html">Publications</a>
                 <a  href="franchise.html">
                   <button class="franchise-btn" >
                      Get a Franchise
